[AB#317325] - Fix styles for selected routes/stops in creation and add effect flows
* [AB#317325] - Fix styles for selected routes/stops in creation and add effect flows

* Merged master into bugfix/AB#317325-selected-routes-and-stops-overlap

--- a/src/components/Control/IncidentsView/IncidentCreation/WizardSteps/SelectEffects.scss
+++ b/src/components/Control/IncidentsView/IncidentCreation/WizardSteps/SelectEffects.scss
@@ -7,3 +7,10 @@
         border-radius: .25rem;
     }
 }
+
+.creation-flow-select-entities {
+    .selection-container {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
